Kubernetes/keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
spec:
  selector:
    app: keycloak-db
  ports:
  - protocol: TCP
    port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
spec:
  selector:
    matchLabels:
      app: keycloak-db
  replicas: 0
  template:
    metadata:
      labels:
        app: keycloak-db
        ID: "keycloak_db_service_id"
    spec:
      containers:
      - name: keycloak-db
        image: postgres:16
        resources:
          limits:
            memory: 600Mi
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: keycloak-db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: keycloak-db-data
        persistentVolumeClaim:
          claimName: keycloak-db-data
