Kubernetes/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
      app: keycloak
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
        ID: "keycloak_service_id"
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        command: []
        resources:
          limits:
            memory: 4096Mi
        stdin: true
        tty: true
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sample-damap-realm-export
          mountPath: /tmp/sample-damap-realm-export.json
          subPath: sample-damap-realm-export.json
      volumes:
        - name: sample-damap-realm-export
          configMap:
            name: sample-damap-realm-export
