Kubernetes/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
      app: proxy
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
        ID: "proxy_service_id"
    spec:
      containers:
      - name: proxy
        image: nginxinc/nginx-unprivileged
        imagePullPolicy: Always
        command: []
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        resources:
          limits:
            memory: 8192Mi
            cpu: "4"
        stdin: true
        tty: true
        ports:
        - containerPort: 80
      volumes:
          - name: nginx-config
            configMap:
              name: nginx-config
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  annotations:
    cert-manager.io/cluster-issuer: acdh-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'  
spec:
  rules:
    - host: proxy_public_url
      http:
        paths:
          - backend:
              service:
                name: proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - proxy_public_url  
      secretName: proxy_public_url-tls
